--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -13,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
   }
