--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "mongoose": "^8.6.0",
+    "mongoose-paginate-v2": "^1.8.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   }
 }
